--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>خريطة القاعات — جامعة الملك فيصل</title>
+  <title>خريطة القاعات كلية العلوم الزراعة وا الأغذية — جامعة الملك فيصل</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -42,7 +42,7 @@
       <div class="credit-inner">
         <div class="credit-title">تصميم وبرمجة</div>
         <div id="creditName" class="credit-name">فهد القحطاني</div>
-        <div class="credit-meta">طالب - مطوّر واجهات الأكترونية وا الألعاب تفاعلية</div>
+        <div class="credit-meta">طالب كلية العلوم الزراعة وا الأغذية - مطوّر واجهات الأكترونية وا الألعاب تفاعلية</div>
         <div class="credit-badge">✨ v1.0</div>
       </div>
       <div class="credit-holo"></div>
@@ -75,7 +75,7 @@
     </div>
   </main>
 
-  <footer class="footer">© فهد القحطاني</footer>
+  <footer class="footer">بأشراف الأستاذ منصور البحري © الطالب فهد عبدالله القحطاني</footer>
 
   <!-- Home Info Modal -->
   <div id="homeInfoModal" class="modal" role="dialog" aria-hidden="true">
@@ -197,3 +197,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
