--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <button id="closeDean" class="modal-close" aria-label="إغلاق">×</button>
       <h3 id="deanTitle">عميد الكلية</h3>
       <div class="modal-inner">
-        <p><strong>اللقب:</strong> عميد الكلية العلوم الزراعة وا الاغذية</p>
+        <p><strong>اللقب:</strong> عميد الكلية العلوم الزراعية و الأغذية</p>
         <p><strong>الدور:</strong> مسؤول عن الشؤون الأكاديمية والإدارية لكلية الجامعة.</p>
         <p><strong>كيفية التواصل:</strong> اضغط على "مراسلة العميد عبر واتساب" في القائمة لإرسال رسالة مباشرة.</p>
         <div style="margin-top:12px;text-align:left;"><button id="closeDeanBtn" class="btn-secondary">إغلاق</button></div>
@@ -197,5 +197,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
