--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <button id="closeAbout" class="modal-close" aria-label="إغلاق">×</button>
       <h3 id="aboutTitle">من نحن</h3>
       <div class="typing-output about-text">
-        <p><strong>فريق خريطة القاعات</strong> — مُبادرة طلابية تهدف لتسهيل الوصول للقاعات داخل حرم الجامعة.</p>
+        <p><strong>فريق خريطة القاعات</strong> -مُبادرة طلابية تهدف لتسهيل الوصول للقاعات داخل كلية العلوم الزراعة والأغذية.</p>
         <p>نرحب بالمساهمات والاقتراحات لتحسين التجربة.</p>
       </div>
       <div style="margin-top:12px;text-align:left;"><button id="closeAboutBtn" class="btn-secondary">إغلاق</button></div>
@@ -172,7 +172,7 @@
       <button id="closeAbout" class="modal-close" aria-label="إغلاق">×</button>
       <h3 id="aboutTitle">من نحن</h3>
       <div class="typing-output about-text">
-        <p><strong>فريق خريطة القاعات</strong> — مُبادرة طلابية تهدف لتسهيل الوصول للقاعات داخل حرم الجامعة.</p>
+        <p><strong>فريق خريطة القاعات</strong> — مُبادرة طلابية تهدف لتسهيل الوصول للقاعات داخل  كلية العلوم الزراعة والأغذية.</p>
         <p>نرحب بالمساهمات والاقتراحات لتحسين التجربة.</p>
       </div>
       <div style="margin-top:12px;text-align:left;"><button id="closeAboutBtn" class="btn-secondary">إغلاق</button></div>
@@ -185,6 +185,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
