--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
   </div>
 
   <div id="complaintStatus" class="status"></div>
-  <div class="note">ملاحظة: يستغرق عادة الرد وقت طويل يرجو الصبر لكي يتم التواصل معك شكرا لتفاهمك</div>
-</div>
+  <div class="note">ملاحظة: سيتم الرد في أقرب وقت ممكن وشكرا لتفهمكم 
 
   </div>  <!-- Dean Modal (جديد) -->  <div id="deanModal" class="modal" role="dialog" aria-hidden="true">
     <div class="modal-backdrop" id="deanBackdrop"></div>
@@ -185,6 +184,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
