--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <button id="closeAbout" class="modal-close" data-close aria-label="إغلاق">×</button>
       <h3 id="aboutTitle">من نحن</h3>
       <div class="typing-output about-text">
-        <p><strong>فريق خريطة القاعات</strong> — مبادرة طلابية تهدف لتسهيل الوصول إلى القاعات داخل كلية العلوم الزراعية والأغذية.</p>
+        <p><strong>فريق خريطة القاعات</strong> — مبادرة تهدف لتسهيل الوصول إلى القاعات داخل كلية العلوم الزراعية والأغذية.</p>
         <p>نرحب بالمساهمات والاقتراحات لتحسين التجربة.</p>
       </div>
       <div style="margin-top:12px;text-align:left;"><button id="closeAboutBtn" class="btn-secondary" data-close>إغلاق</button></div>
@@ -194,4 +194,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
